<resources>
    <string name="app_name">SajuApp</string>
    <string name="login_caps">Log in</string>
    <string name="FB_login">Continue with Facebook</string>
    <string name="or">OR</string>
    <string name="bt">Phone number, username, or emailId</string>
    <string name="p">Password</string>
    <string name="fp">Forgot password?</string>
    <string name="e">Email</string>
    <string name="username_label">Username</string>
    <string name="nam">Not a member?</string>
    <string name="j">Join now</string>
    <string name="v">vertical line</string>
    <string name="n">Name</string>
    <string name="en">Enter Name:</string>
    <string name="fn">Father Name:</string>
    <string name="dob">Date of Birth:</string>
    <string name="addr">Address:</string>
    <string name="cd">Company Details:</string>
    <string name="ca">Company Address:</string>
    <string name="s">SUBMIT </string>
    <string name="d">DD</string>
    <string name="m">MM</string>
    <string name="y">YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="transgender">Transgender</string>
    <string name="permanent">Permanent</string>
    <string name="temporary">Temporary</string>
    <string name="sign_in">Sign in</string>
    <string name="vpa">A world of possibility in an app</string>
    <string name="ok">OK</string>
    <string name="ft">First time?</string>
    <string name="sign_up">Sign up</string>
    <string name="wcs">We can start something new</string>
  <string name="Birth">Birth:</string>
    <string name="have_we_met">Have me met before?</string>
    <string name="login_with_fb">Log in with Facebook</string>
<string name="dont_have_an_account">Dont have an account?</string>
</resources>