<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <!-- Sign in-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="-40dp"
            android:layout_marginEnd="0dp"
            android:fontFamily="@font/andikanewbasic_bold"
            android:gravity="center"
            android:paddingTop="20dp"
            android:rotation="-90"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/quicksand_semibold"
            android:layout_marginBottom="40dp"
            android:gravity="center_vertical"
            android:text="@string/wcs"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="60dp"
        android:paddingRight="60dp">

        <!-- Name -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/quicksand_light"
            android:background="@color/transparent"
            android:hint="@string/n" />

        <!-- Email -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_light"
            android:background="@color/transparent"
            android:hint="@string/e" />

        <!-- Password -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/quicksand_light"
            android:background="@color/transparent"
            android:hint="@string/p" />

        <!-- DOB -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_semibold"
                android:hint="@string/Birth"
                android:textSize="18sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:fontFamily="@font/quicksand_light"
                android:gravity="center"
                android:hint="@string/d"
                android:inputType="number" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_light"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/m"
                android:inputType="number"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_light"
                android:background="@color/transparent"
                android:hint="@string/y"
                android:inputType="number" />

            <ImageView
                android:layout_width="210dp"
                android:layout_height="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:background="@drawable/drop_down"/>


        </LinearLayout>

        <!-- Arrow -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="50dp"
            android:background="@drawable/arrow"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="25dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/right_arrow"
                android:contentDescription="@null" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="274dp"
            android:layout_height="44dp"
            android:layout_marginTop="60dp"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:fontFamily="@font/quicksand_light"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/have_we_met"
                android:textColor="@color/white" />


            <TextView
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/andikanewbasic_bold"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
