<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:id="@+id/Iv_name"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/_instagram_logo"
        android:gravity="center"
        android:contentDescription="@null"/>

    <!-- Continue with FB-->
    <LinearLayout
        android:id="@+id/Fb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_curve_button"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:background="@drawable/_facebook_logo"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/FB_login"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <!-- blank text editor-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="7dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/black" />

        <TextView
            android:layout_width="3dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/black" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="times new roman"
        android:layout_marginTop="20dp"
        android:hint="@string/bt"
        android:textColorHint="@color/black"
        android:textSize="14sp" />

    <!-- Password-->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="times new roman"
        android:hint="@string/p"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <!-- log in-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="times new roman"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@color/Blue"
        android:text="@string/login_caps"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:padding="5dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/fp"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>




























