<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical"
    android:padding="50dp">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"

        android:background="@drawable/emirates_logo"
        android:contentDescription="@null" />

    <!-- Email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginRight="1dp"
        android:background="@color/light_cream"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:gravity="center"
            android:background="@color/teal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/globe"
                android:layout_gravity="center"
                android:contentDescription="@null" />

        </LinearLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_marginBottom="1dp"
            android:padding="8dp"
            android:hint="@string/e"
            android:background="@color/teal"
            android:textColor="@color/white" />

    </LinearLayout>

    <!-- Username-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@color/light_cream"
        android:paddingBottom="1dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/teal"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/globe"
                android:contentDescription="@null" />

        </LinearLayout>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.8"
            android:background="@color/teal"
            android:hint="@string/username_label"
            android:padding="8dp"
            android:textColor="@color/white" />

    </LinearLayout>

    <!--Password-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="@color/light_cream"
        android:paddingBottom="1dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/teal"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/padlock_icon"
                android:contentDescription="@null" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_weight="0.8"
            android:background="@color/teal"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:hint="@string/p"
                android:padding="8dp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <!-- Forgot password-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/fp"
        android:padding="22dp" />

    <!-- login-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/login_block"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/login_caps"
            android:textColor="@color/teal"
            android:textStyle="bold" />
    </LinearLayout>


    <!-- Not a member__Join now-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/nam" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/j"
            android:textColor="@color/cream"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>