<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intsa_back"
    android:orientation="vertical">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="275dp"
        android:layout_gravity="center"
        android:background="@drawable/instagram"
        android:outlineAmbientShadowColor="@color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border_curve_button"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_curve_button"
            android:hint="@string/username_label"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/WHITE2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/border_curve_button"
        android:orientation="horizontal">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@null"
            android:background="@drawable/border_curve_button"
            android:hint="@string/p"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/WHITE2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/login_block"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/login_caps"
            android:textColor="@color/WHITE2"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="-20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="Forgot your login details?"
            android:textColor="@color/WHITE2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-25dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Get help signing in"
            android:textColor="@color/WHITE2"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/WHITE1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:text="@string/or"
            android:gravity="center"
            android:textColor="@color/WHITE2"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/WHITE1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Fb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/_facebook_logo"
            android:contentDescription="@null" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/login_with_fb"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:padding="20dp"
        android:background="@drawable/border_curve_button"
        android:orientation="horizontal"
        android:weightSum="2">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/WHITE2" />
           </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

"
            android:layout_weight="1"

            android:text="@string/sign_up"

            android:textColor="@color/WHITE2"
            android:textStyle="bold"/>


    </LinearLayout>


</LinearLayout>